Fixed overflow scrollbar appearing in content-grid

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ h2, h3, p {
 
 #content .container {
   padding-top: 10px;
-  overflow:auto;
+  overflow: hidden;
 }
 
 #content-left {
